# BifrostEXR

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ExrImage.cpp  ExrImage.h  ExrImageExport.h  PackConfig.json.in
